[package]
name = "corrina-engine"
version = "0.1.0"
authors = ["corrina <csivak345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"] }
uuid = {version = "0.8.2", features = ["v4"]}
lazy_static = "1.4.0"
sdl2 = {version = "0.34.3", features=["image"]}